syntax = "proto3";
package nocloudhealth;

option go_package = "github.com/slntopp/nocloud/pkg/health/healthpb";

message ProbeRequest {
    string probe_type = 1;
    string payload = 2;
}

message ProbeResponse {
    string response = 1;
}

service HealthService {
    rpc Probe(nocloudhealth.ProbeRequest) returns (nocloudhealth.ProbeResponse);
};